--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rimraf dist"
   },
   "keywords": [],
-  "author": "",
+  "author": "Oscar Olivares",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
