--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
+    "graphql-request": "^1.8.2",
     "graphql-tools": "^4.0.5",
     "mariadb": "^2.1.0",
     "sequelize": "^5.10.2",
